--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
-{% if username %}
-{% with username = username %}
+{% if userID %}
+{% with userID = userID %}
 {% include "header.html" %}
 {% endwith %}
 {% else %}
@@ -16,7 +16,7 @@
       <a href='{{url_for('showCategoryItems', catName = c.name) }}'>{{c.name}}</a>
     </p>
     {% endfor %}
-    {% if username %}
+    {% if userID %}
     <br>
     <a class ="bottom-link" href='{{url_for('addCategory')}}'>New Category</a>
     {% endif %}
@@ -28,7 +28,7 @@
     <p class="item-name">{{i.name}} <i class = "category-name">({{i.category.name}})</i> </p>
     {% endfor %}
     <br>
-    {% if username %}
+    {% if userID %}
     <a class ="bottom-link" href='{{url_for('addItem')}}'>New Item</a>
     {% endif %}
   </div>
